// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import option Function: errors 1`] = `Array []`;

exports[`import option Function: module (evaluated) 1`] = `
Array [
  Array [
    3,
    "a {
  b: b;
}
",
    "screen and (orientation:landscape) and (min-width: 100px)",
  ],
  Array [
    2,
    ".test {
  c: c;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    3,
    ".test {
  d: d;
}
",
    "(min-width: 100px)",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css#hash);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?#hash);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?foo=bar#hash);",
  ],
  Array [
    1,
    "@import url(http://example.com/other-style.css);",
    "screen and (orientation:landscape)",
  ],
  Array [
    1,
    "@import url(http://example.com/other-style.css);",
    "screen and (orientation:landscape)",
  ],
  Array [
    1,
    "@import url(//example.com/style.css);",
  ],
  Array [
    4,
    ".query {
  e: e;
}
",
    "",
  ],
  Array [
    5,
    ".other-query {
  f: f;
}
",
    "",
  ],
  Array [
    5,
    ".other-query {
  f: f;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Roboto);",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);",
  ],
  Array [
    6,
    ".relative {
  color: red;
}
",
    "",
  ],
  Array [
    7,
    ".top-relative {
  color: black;
}
",
    "",
  ],
  Array [
    8,
    ".tilde {
  color: yellow;
}
",
    "",
  ],
  Array [
    9,
    ".alias {
  color: red;
}
",
    "",
  ],
  Array [
    10,
    ".background-imported {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
  Array [
    11,
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    11,
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    11,
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    11,
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    1,
    "@import url(test.css);
@import url('test.css');
@import url(\\"test.css\\");
@IMPORT url(test.css);
@import URL(test.css);
@import url(test.css );
@import url( test.css);
@import url( test.css );
@import url(
  test.css
);
@import url();
@import url('');
@import url(\\"\\");
@import \\"test.css\\";
@import 'test.css';
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import url(test.css) screen and (orientation:landscape);
@import url(test.css) SCREEN AND (ORIENTATION: LANDSCAPE);
@import url(test.css)screen and (orientation:landscape);
@import url(test.css)  screen and (orientation:landscape);
@import url(~package/test.css);
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

.background {
  background: url(/webpack/public/path/img.png);
}

@import url(./test.css);

@import './te\\\\
st.css';
@import './te\\\\
\\\\
\\\\
st.css';
@import url('./te\\\\
st.css');
@import url('./te\\\\
\\\\
\\\\
st.css');
@import './test test.css';
@import url('./test test.css');
@import './test\\\\ test.css';
@import url('./test\\\\ test.css');
@import './test%20test.css';
@import url('./test%20test.css');
@import './\\\\74\\\\65\\\\73\\\\74.css';
@import url('./\\\\74\\\\65\\\\73\\\\74.css');
@import './t\\\\65\\\\73\\\\74.css';
@import url('./t\\\\65\\\\73\\\\74.css');
@import url(./test\\\\ test.css);
@import url(./t\\\\65st%20test.css);
@import url('./t\\\\65st%20test.css');
@import url(\\"./t\\\\65st%20test.css\\");
@import \\"./t\\\\65st%20test.css\\";
@import './t\\\\65st%20test.css';
@import url(                 test.css                      );
",
    "",
  ],
]
`;

exports[`import option Function: module 1`] = `
"// Imports
var ___CSS_LOADER_API_IMPORT___ = require(\\"../../../src/runtime/api.js\\");
var ___CSS_LOADER_AT_RULE_IMPORT_0___ = require(\\"-!../../../src/index.js??ref--4-0!./test-media.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_1___ = require(\\"-!../../../src/index.js??ref--4-0!./test-other.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_2___ = require(\\"-!../../../src/index.js??ref--4-0!./query.css?foo=1&bar=1\\");
var ___CSS_LOADER_AT_RULE_IMPORT_3___ = require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\");
var ___CSS_LOADER_AT_RULE_IMPORT_4___ = require(\\"-!../../../src/index.js??ref--4-0!./relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_5___ = require(\\"-!../../../src/index.js??ref--4-0!../import/top-relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_6___ = require(\\"-!../../../src/index.js??ref--4-0!package/tilde.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_7___ = require(\\"-!../../../src/index.js??ref--4-0!aliasesImport/alias.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_8___ = require(\\"-!../../../src/index.js??ref--4-0!./url.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_9___ = require(\\"-!../../../src/index.js??ref--4-0!./te'st.css\\");
var ___CSS_LOADER_GET_URL_IMPORT___ = require(\\"../../../src/runtime/getUrl.js\\");
var ___CSS_LOADER_URL_IMPORT_0___ = require(\\"./img.png\\");
exports = module.exports = ___CSS_LOADER_API_IMPORT___(false);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_1___, \\"(min-width: 100px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?foo=bar#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and (orientation:landscape)\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and (orientation:landscape)\\"]);
exports.push([module.id, \\"@import url(//example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_2___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_3___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_3___, \\"screen and (orientation:landscape)\\");
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Roboto);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_4___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_5___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_6___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_7___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_8___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_9___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_9___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_9___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_9___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
// Module
exports.push([module.id, \\"@import url(test.css);\\\\n@import url('test.css');\\\\n@import url(\\\\\\"test.css\\\\\\");\\\\n@IMPORT url(test.css);\\\\n@import URL(test.css);\\\\n@import url(test.css );\\\\n@import url( test.css);\\\\n@import url( test.css );\\\\n@import url(\\\\n  test.css\\\\n);\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import \\\\\\"test.css\\\\\\";\\\\n@import 'test.css';\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import url(test.css) screen and (orientation:landscape);\\\\n@import url(test.css) SCREEN AND (ORIENTATION: LANDSCAPE);\\\\n@import url(test.css)screen and (orientation:landscape);\\\\n@import url(test.css)  screen and (orientation:landscape);\\\\n@import url(~package/test.css);\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL_REPLACEMENT_0___ + \\");\\\\n}\\\\n\\\\n@import url(./test.css);\\\\n\\\\n@import './te\\\\\\\\\\\\nst.css';\\\\n@import './te\\\\\\\\\\\\n\\\\\\\\\\\\n\\\\\\\\\\\\nst.css';\\\\n@import url('./te\\\\\\\\\\\\nst.css');\\\\n@import url('./te\\\\\\\\\\\\n\\\\\\\\\\\\n\\\\\\\\\\\\nst.css');\\\\n@import './test test.css';\\\\n@import url('./test test.css');\\\\n@import './test\\\\\\\\ test.css';\\\\n@import url('./test\\\\\\\\ test.css');\\\\n@import './test%20test.css';\\\\n@import url('./test%20test.css');\\\\n@import './\\\\\\\\74\\\\\\\\65\\\\\\\\73\\\\\\\\74.css';\\\\n@import url('./\\\\\\\\74\\\\\\\\65\\\\\\\\73\\\\\\\\74.css');\\\\n@import './t\\\\\\\\65\\\\\\\\73\\\\\\\\74.css';\\\\n@import url('./t\\\\\\\\65\\\\\\\\73\\\\\\\\74.css');\\\\n@import url(./test\\\\\\\\ test.css);\\\\n@import url(./t\\\\\\\\65st%20test.css);\\\\n@import url('./t\\\\\\\\65st%20test.css');\\\\n@import url(\\\\\\"./t\\\\\\\\65st%20test.css\\\\\\");\\\\n@import \\\\\\"./t\\\\\\\\65st%20test.css\\\\\\";\\\\n@import './t\\\\\\\\65st%20test.css';\\\\n@import url(                 test.css                      );\\\\n\\", \\"\\"]);
"
`;

exports[`import option Function: warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(12:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(13:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(14:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(17:1) Unable to find uri in '@import '''",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(18:1) Unable to find uri in '@import \\"\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(19:1) Unable to find uri in '@import \\"   \\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(20:1) Unable to find uri in '@import \\"
\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(22:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(23:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(24:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(40:1) Unable to find uri in '@import '",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(41:1) Unable to find uri in '@import foo-bar'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(43:1) It looks like you didn't end your @import statement correctly. Child nodes are attached to it.",
]
`;

exports[`import option false: errors 1`] = `Array []`;

exports[`import option false: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "@import url(test.css);
@import url('test.css');
@import url(\\"test.css\\");
@IMPORT url(test.css);
@import URL(test.css);
@import url(test.css );
@import url( test.css);
@import url( test.css );
@import url(
  test.css
);
@import url();
@import url('');
@import url(\\"\\");
@import \\"test.css\\";
@import 'test.css';
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import url(test.css) screen and (orientation:landscape);
@import url(test.css) SCREEN AND (ORIENTATION: LANDSCAPE);
@import url(test.css)screen and (orientation:landscape);
@import url(test.css)  screen and (orientation:landscape);
@import url(test-media.css) screen and (orientation:landscape);
@import url(test-other.css) (min-width: 100px);
@import url(http://example.com/style.css);
@import url(http://example.com/style.css);
@import url(http://example.com/style.css#hash);
@import url(http://example.com/style.css?#hash);
@import url(http://example.com/style.css?foo=bar#hash);
@import url(http://example.com/other-style.css) screen and (orientation:landscape);
@import url(http://example.com/other-style.css) screen and (orientation:landscape);
@import url(\\"//example.com/style.css\\");
@import url(~package/test.css);
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}
@import url('query.css?foo=1&bar=1');
@import url('other-query.css?foo=1&bar=1#hash');
@import url('other-query.css?foo=1&bar=1#hash') screen and (orientation:landscape);
@import url('https://fonts.googleapis.com/css?family=Roboto');
@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');
@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto');

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

@import url('./relative.css');
@import url('../import/top-relative.css');
@import url(~package/tilde.css);
@import url(~aliasesImport/alias.css);
@import url('./url.css');

.background {
  background: url(/webpack/public/path/img.png);
}

@import url(./test.css);

@import './te\\\\
st.css';
@import './te\\\\
\\\\
\\\\
st.css';
@import url('./te\\\\
st.css');
@import url('./te\\\\
\\\\
\\\\
st.css');

@import \\"./te'st.css\\";
@import url(\\"./te'st.css\\");
@import './te\\\\'st.css';
@import url('./te\\\\'st.css');
@import './test test.css';
@import url('./test test.css');
@import './test\\\\ test.css';
@import url('./test\\\\ test.css');
@import './test%20test.css';
@import url('./test%20test.css');
@import './\\\\74\\\\65\\\\73\\\\74.css';
@import url('./\\\\74\\\\65\\\\73\\\\74.css');
@import './t\\\\65\\\\73\\\\74.css';
@import url('./t\\\\65\\\\73\\\\74.css');
@import url(./test\\\\ test.css);
@import url(./t\\\\65st%20test.css);
@import url('./t\\\\65st%20test.css');
@import url(\\"./t\\\\65st%20test.css\\");
@import \\"./t\\\\65st%20test.css\\";
@import './t\\\\65st%20test.css';
@import url(                 test.css                      );
",
    "",
  ],
]
`;

exports[`import option false: module 1`] = `
"// Imports
var ___CSS_LOADER_API_IMPORT___ = require(\\"../../../src/runtime/api.js\\");
var ___CSS_LOADER_GET_URL_IMPORT___ = require(\\"../../../src/runtime/getUrl.js\\");
var ___CSS_LOADER_URL_IMPORT_0___ = require(\\"./img.png\\");
exports = module.exports = ___CSS_LOADER_API_IMPORT___(false);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
// Module
exports.push([module.id, \\"@import url(test.css);\\\\n@import url('test.css');\\\\n@import url(\\\\\\"test.css\\\\\\");\\\\n@IMPORT url(test.css);\\\\n@import URL(test.css);\\\\n@import url(test.css );\\\\n@import url( test.css);\\\\n@import url( test.css );\\\\n@import url(\\\\n  test.css\\\\n);\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import \\\\\\"test.css\\\\\\";\\\\n@import 'test.css';\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import url(test.css) screen and (orientation:landscape);\\\\n@import url(test.css) SCREEN AND (ORIENTATION: LANDSCAPE);\\\\n@import url(test.css)screen and (orientation:landscape);\\\\n@import url(test.css)  screen and (orientation:landscape);\\\\n@import url(test-media.css) screen and (orientation:landscape);\\\\n@import url(test-other.css) (min-width: 100px);\\\\n@import url(http://example.com/style.css);\\\\n@import url(http://example.com/style.css);\\\\n@import url(http://example.com/style.css#hash);\\\\n@import url(http://example.com/style.css?#hash);\\\\n@import url(http://example.com/style.css?foo=bar#hash);\\\\n@import url(http://example.com/other-style.css) screen and (orientation:landscape);\\\\n@import url(http://example.com/other-style.css) screen and (orientation:landscape);\\\\n@import url(\\\\\\"//example.com/style.css\\\\\\");\\\\n@import url(~package/test.css);\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n@import url('query.css?foo=1&bar=1');\\\\n@import url('other-query.css?foo=1&bar=1#hash');\\\\n@import url('other-query.css?foo=1&bar=1#hash') screen and (orientation:landscape);\\\\n@import url('https://fonts.googleapis.com/css?family=Roboto');\\\\n@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');\\\\n@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto');\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n@import url('./relative.css');\\\\n@import url('../import/top-relative.css');\\\\n@import url(~package/tilde.css);\\\\n@import url(~aliasesImport/alias.css);\\\\n@import url('./url.css');\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL_REPLACEMENT_0___ + \\");\\\\n}\\\\n\\\\n@import url(./test.css);\\\\n\\\\n@import './te\\\\\\\\\\\\nst.css';\\\\n@import './te\\\\\\\\\\\\n\\\\\\\\\\\\n\\\\\\\\\\\\nst.css';\\\\n@import url('./te\\\\\\\\\\\\nst.css');\\\\n@import url('./te\\\\\\\\\\\\n\\\\\\\\\\\\n\\\\\\\\\\\\nst.css');\\\\n\\\\n@import \\\\\\"./te'st.css\\\\\\";\\\\n@import url(\\\\\\"./te'st.css\\\\\\");\\\\n@import './te\\\\\\\\'st.css';\\\\n@import url('./te\\\\\\\\'st.css');\\\\n@import './test test.css';\\\\n@import url('./test test.css');\\\\n@import './test\\\\\\\\ test.css';\\\\n@import url('./test\\\\\\\\ test.css');\\\\n@import './test%20test.css';\\\\n@import url('./test%20test.css');\\\\n@import './\\\\\\\\74\\\\\\\\65\\\\\\\\73\\\\\\\\74.css';\\\\n@import url('./\\\\\\\\74\\\\\\\\65\\\\\\\\73\\\\\\\\74.css');\\\\n@import './t\\\\\\\\65\\\\\\\\73\\\\\\\\74.css';\\\\n@import url('./t\\\\\\\\65\\\\\\\\73\\\\\\\\74.css');\\\\n@import url(./test\\\\\\\\ test.css);\\\\n@import url(./t\\\\\\\\65st%20test.css);\\\\n@import url('./t\\\\\\\\65st%20test.css');\\\\n@import url(\\\\\\"./t\\\\\\\\65st%20test.css\\\\\\");\\\\n@import \\\\\\"./t\\\\\\\\65st%20test.css\\\\\\";\\\\n@import './t\\\\\\\\65st%20test.css';\\\\n@import url(                 test.css                      );\\\\n\\", \\"\\"]);
"
`;

exports[`import option false: warnings 1`] = `Array []`;

exports[`import option should keep original order: errors 1`] = `Array []`;

exports[`import option should keep original order: module (evaluated) 1`] = `
Array [
  Array [
    2,
    ".order-1 {
  color: red;
}
",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
  ],
  Array [
    3,
    ".order-1 {
  color: red;
}
",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
  ],
  Array [
    2,
    ".order-1 {
  color: red;
}
",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
  ],
  Array [
    3,
    ".order-1 {
  color: red;
}
",
    "screen and (min-width: 2000px)",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
  ],
  Array [
    5,
    ".order-3-1 {
  color: white;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    4,
    ".order-3 {
  color: red;
}
",
    "",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
  ],
  Array [
    6,
    ".order-4-1 {
  color: red;
}
",
    "screen and (min-width: 1000px)",
  ],
  Array [
    8,
    ".order-4-2-1 {
  color: red;
}
",
    "screen and (min-width: 2000px)",
  ],
  Array [
    9,
    ".order-4-2-2 {
  color: red;
}
",
    "screen and (min-width: 2000px) and (orientation:landscape)",
  ],
  Array [
    7,
    ".order-4-2 {
  color: red;
}
",
    "screen and (min-width: 2000px)",
  ],
  Array [
    5,
    ".order-4 {
  color: red;
}
",
    "screen",
  ],
  Array [
    1,
    "div {
  width: 100%;
  height: 200px;
}
",
    "",
  ],
]
`;

exports[`import option should keep original order: module 1`] = `
"// Imports
var ___CSS_LOADER_API_IMPORT___ = require(\\"../../../src/runtime/api.js\\");
var ___CSS_LOADER_AT_RULE_IMPORT_0___ = require(\\"-!../../../src/index.js??ref--4-0!./order-1.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_1___ = require(\\"-!../../../src/index.js??ref--4-0!./order-2.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_2___ = require(\\"-!../../../src/index.js??ref--4-0!./order-3.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_3___ = require(\\"-!../../../src/index.js??ref--4-0!./order-4.css\\");
exports = module.exports = ___CSS_LOADER_API_IMPORT___(false);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_1___);
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_1___, \\"screen and (min-width: 2000px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_2___);
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_3___, \\"screen\\");
// Module
exports.push([module.id, \\"div {\\\\n  width: 100%;\\\\n  height: 200px;\\\\n}\\\\n\\", \\"\\"]);
"
`;

exports[`import option should keep original order: warnings 1`] = `Array []`;

exports[`import option true: errors 1`] = `Array []`;

exports[`import option true: module (evaluated) 1`] = `
Array [
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "screen and (orientation: landscape)",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    4,
    "a {
  b: b;
}
",
    "screen and (orientation:landscape) and (min-width: 100px)",
  ],
  Array [
    3,
    ".test {
  c: c;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    4,
    ".test {
  d: d;
}
",
    "(min-width: 100px)",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css#hash);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?#hash);",
  ],
  Array [
    1,
    "@import url(http://example.com/style.css?foo=bar#hash);",
  ],
  Array [
    1,
    "@import url(http://example.com/other-style.css);",
    "screen and (orientation:landscape)",
  ],
  Array [
    1,
    "@import url(http://example.com/other-style.css);",
    "screen and (orientation:landscape)",
  ],
  Array [
    1,
    "@import url(//example.com/style.css);",
  ],
  Array [
    5,
    ".test {
  d: d
}
",
    "",
  ],
  Array [
    6,
    ".query {
  e: e;
}
",
    "",
  ],
  Array [
    7,
    ".other-query {
  f: f;
}
",
    "",
  ],
  Array [
    7,
    ".other-query {
  f: f;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Roboto);",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);",
  ],
  Array [
    1,
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);",
  ],
  Array [
    8,
    ".relative {
  color: red;
}
",
    "",
  ],
  Array [
    9,
    ".top-relative {
  color: black;
}
",
    "",
  ],
  Array [
    10,
    ".tilde {
  color: yellow;
}
",
    "",
  ],
  Array [
    11,
    ".alias {
  color: red;
}
",
    "",
  ],
  Array [
    12,
    ".background-imported {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    13,
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    13,
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    13,
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    13,
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    14,
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    14,
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    14,
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    14,
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    14,
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    14,
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    14,
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    14,
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    14,
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    14,
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    14,
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    14,
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    2,
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    1,
    "@import url();
@import url('');
@import url(\\"\\");
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

.background {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
]
`;

exports[`import option true: module 1`] = `
"// Imports
var ___CSS_LOADER_API_IMPORT___ = require(\\"../../../src/runtime/api.js\\");
var ___CSS_LOADER_AT_RULE_IMPORT_0___ = require(\\"-!../../../src/index.js??ref--4-0!./test.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_1___ = require(\\"-!../../../src/index.js??ref--4-0!./test-media.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_2___ = require(\\"-!../../../src/index.js??ref--4-0!./test-other.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_3___ = require(\\"-!../../../src/index.js??ref--4-0!package/test.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_4___ = require(\\"-!../../../src/index.js??ref--4-0!./query.css?foo=1&bar=1\\");
var ___CSS_LOADER_AT_RULE_IMPORT_5___ = require(\\"-!../../../src/index.js??ref--4-0!./other-query.css?foo=1&bar=1#hash\\");
var ___CSS_LOADER_AT_RULE_IMPORT_6___ = require(\\"-!../../../src/index.js??ref--4-0!./relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_7___ = require(\\"-!../../../src/index.js??ref--4-0!../import/top-relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_8___ = require(\\"-!../../../src/index.js??ref--4-0!package/tilde.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_9___ = require(\\"-!../../../src/index.js??ref--4-0!aliasesImport/alias.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_10___ = require(\\"-!../../../src/index.js??ref--4-0!./url.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_11___ = require(\\"-!../../../src/index.js??ref--4-0!./te'st.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_12___ = require(\\"-!../../../src/index.js??ref--4-0!./test test.css\\");
var ___CSS_LOADER_GET_URL_IMPORT___ = require(\\"../../../src/runtime/getUrl.js\\");
var ___CSS_LOADER_URL_IMPORT_0___ = require(\\"./img.png\\");
exports = module.exports = ___CSS_LOADER_API_IMPORT___(false);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation: landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_1___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_2___, \\"(min-width: 100px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?foo=bar#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and (orientation:landscape)\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and (orientation:landscape)\\"]);
exports.push([module.id, \\"@import url(//example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_3___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_4___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_5___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_5___, \\"screen and (orientation:landscape)\\");
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Roboto);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_6___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_7___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_8___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_9___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_10___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_11___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_11___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_11___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_11___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
// Module
exports.push([module.id, \\"@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL_REPLACEMENT_0___ + \\");\\\\n}\\\\n\\", \\"\\"]);
"
`;

exports[`import option true: warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(12:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(13:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(14:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(17:1) Unable to find uri in '@import '''",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(18:1) Unable to find uri in '@import \\"\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(19:1) Unable to find uri in '@import \\"   \\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(20:1) Unable to find uri in '@import \\"
\\"'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(22:1) Unable to find uri in '@import url()'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(23:1) Unable to find uri in '@import url('')'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(24:1) Unable to find uri in '@import url(\\"\\")'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(40:1) Unable to find uri in '@import '",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(41:1) Unable to find uri in '@import foo-bar'",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(43:1) It looks like you didn't end your @import statement correctly. Child nodes are attached to it.",
]
`;
